--- a/Draw/Controller/Feed/FeedController.xib
+++ b/Draw/Controller/Feed/FeedController.xib
@@ -202,7 +202,7 @@
 						<string key="NSFrame">{{115, 71}, {90, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="840280138"/>
+						<reference key="NSNextKeyView" ref="21268056"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -215,7 +215,7 @@
 						<reference key="IBUIFontDescription" ref="303299717"/>
 						<reference key="IBUIFont" ref="577528585"/>
 					</object>
-					<object class="IBUIButton" id="840280138">
+					<object class="IBUIButton" id="21268056">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{205, 71}, {90, 30}}</string>
@@ -258,7 +258,7 @@
 					</object>
 					<object class="IBUILabel" id="587427890">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{20, 131}, {280, 60}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
@@ -350,9 +350,17 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">hotFeedButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="840280138"/>
+						<reference key="destination" ref="21268056"/>
 					</object>
 					<int key="connectionID">49</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">noFeedTipsLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="587427890"/>
+					</object>
+					<int key="connectionID">53</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -400,7 +408,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickFeedButton:</string>
-						<reference key="source" ref="840280138"/>
+						<reference key="source" ref="21268056"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -429,7 +437,7 @@
 							<reference ref="997203346"/>
 							<reference ref="977230230"/>
 							<reference ref="587427890"/>
-							<reference ref="840280138"/>
+							<reference ref="21268056"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -497,7 +505,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">45</int>
-						<reference key="object" ref="840280138"/>
+						<reference key="object" ref="21268056"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -524,7 +532,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">52</int>
+			<int key="maxID">53</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -549,6 +557,7 @@
 						<string key="allFeedButton">UIButton</string>
 						<string key="hotFeedButton">UIButton</string>
 						<string key="myFeedButton">UIButton</string>
+						<string key="noFeedTipsLabel">UILabel</string>
 						<string key="titleLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -563,6 +572,10 @@
 						<object class="IBToOneOutletInfo" key="myFeedButton">
 							<string key="name">myFeedButton</string>
 							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="noFeedTipsLabel">
+							<string key="name">noFeedTipsLabel</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="titleLabel">
 							<string key="name">titleLabel</string>
