--- a/Draw/Controller/Feed/FeedCell.xib
+++ b/Draw/Controller/Feed/FeedCell.xib
@@ -33,31 +33,31 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="806274031">
+			<object class="IBUITableViewCell" id="359896881">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="965286320">
-						<reference key="NSNextResponder" ref="806274031"/>
+					<object class="IBUIView" id="496499170">
+						<reference key="NSNextResponder" ref="359896881"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="785250259">
-								<reference key="NSNextResponder" ref="965286320"/>
+							<object class="IBUIImageView" id="75584678">
+								<reference key="NSNextResponder" ref="496499170"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{230, 27}, {65, 65}}</string>
-								<reference key="NSSuperview" ref="965286320"/>
+								<reference key="NSSuperview" ref="496499170"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUILabel" id="825637680">
-								<reference key="NSNextResponder" ref="965286320"/>
+							<object class="IBUILabel" id="237826477">
+								<reference key="NSNextResponder" ref="496499170"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{219, 2}, {76, 21}}</string>
-								<reference key="NSSuperview" ref="965286320"/>
+								<reference key="NSSuperview" ref="496499170"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="359006038"/>
+								<reference key="NSNextKeyView" ref="956647232"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -73,33 +73,33 @@
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">2</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="654842273">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="66121370">
 									<int key="type">1</int>
 									<double key="pointSize">13</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="1046150485">
+								<object class="NSFont" key="IBUIFont" id="219033576">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="788647573">
-								<reference key="NSNextResponder" ref="965286320"/>
+							<object class="IBUIImageView" id="960905513">
+								<reference key="NSNextResponder" ref="496499170"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 5}, {35, 34}}</string>
-								<reference key="NSSuperview" ref="965286320"/>
+								<reference key="NSSuperview" ref="496499170"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="265585987"/>
+								<reference key="NSNextKeyView" ref="208933473"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUILabel" id="359006038">
-								<reference key="NSNextResponder" ref="965286320"/>
+							<object class="IBUILabel" id="956647232">
+								<reference key="NSNextResponder" ref="496499170"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{3, 44}, {131, 21}}</string>
-								<reference key="NSSuperview" ref="965286320"/>
+								<reference key="NSSuperview" ref="496499170"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="767712757"/>
+								<reference key="NSNextKeyView" ref="137769579"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -119,30 +119,30 @@
 									<int key="traits">2</int>
 									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="83050839">
+								<object class="NSFont" key="IBUIFont" id="45609084">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIButton" id="527367575">
-								<reference key="NSNextResponder" ref="965286320"/>
+							<object class="IBUIButton" id="94037211">
+								<reference key="NSNextResponder" ref="496499170"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{2, 67}, {72, 28}}</string>
-								<reference key="NSSuperview" ref="965286320"/>
+								<reference key="NSSuperview" ref="496499170"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="785250259"/>
+								<reference key="NSNextKeyView" ref="75584678"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<string key="IBUINormalTitle">再来一副</string>
-								<object class="NSColor" key="IBUIHighlightedTitleColor" id="568448445">
+								<object class="NSColor" key="IBUIHighlightedTitleColor" id="1031766726">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
-								<reference key="IBUINormalTitleColor" ref="568448445"/>
+								<reference key="IBUINormalTitleColor" ref="1031766726"/>
 								<object class="NSColor" key="IBUINormalTitleShadowColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MAA</bytes>
@@ -155,22 +155,22 @@
 									<int key="type">2</int>
 									<double key="pointSize">14</double>
 								</object>
-								<reference key="IBUIFont" ref="83050839"/>
+								<reference key="IBUIFont" ref="45609084"/>
 							</object>
-							<object class="IBUILabel" id="265585987">
-								<reference key="NSNextResponder" ref="965286320"/>
+							<object class="IBUILabel" id="208933473">
+								<reference key="NSNextResponder" ref="496499170"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{51, -3}, {164, 42}}</string>
-								<reference key="NSSuperview" ref="965286320"/>
+								<reference key="NSSuperview" ref="496499170"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="825637680"/>
+								<reference key="NSNextKeyView" ref="237826477"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">Jenny 猜对了我的画Jenny 猜对了我的画Jenny 猜对了我的画</string>
-								<object class="NSColor" key="IBUITextColor" id="563956282">
+								<object class="NSColor" key="IBUITextColor" id="959466097">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
@@ -179,35 +179,35 @@
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUINumberOfLines">2</int>
-								<reference key="IBUIFontDescription" ref="654842273"/>
-								<reference key="IBUIFont" ref="1046150485"/>
+								<reference key="IBUIFontDescription" ref="66121370"/>
+								<reference key="IBUIFont" ref="219033576"/>
 							</object>
-							<object class="IBUILabel" id="767712757">
-								<reference key="NSNextResponder" ref="965286320"/>
+							<object class="IBUILabel" id="137769579">
+								<reference key="NSNextResponder" ref="496499170"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{52, 32}, {107, 21}}</string>
-								<reference key="NSSuperview" ref="965286320"/>
+								<reference key="NSSuperview" ref="496499170"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="527367575"/>
+								<reference key="NSNextKeyView" ref="94037211"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">kGuess</string>
-								<reference key="IBUITextColor" ref="563956282"/>
+								<reference key="IBUITextColor" ref="959466097"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 								<float key="IBUIMinimumFontSize">10</float>
-								<reference key="IBUIFontDescription" ref="654842273"/>
-								<reference key="IBUIFont" ref="1046150485"/>
+								<reference key="IBUIFontDescription" ref="66121370"/>
+								<reference key="IBUIFont" ref="219033576"/>
 							</object>
 						</array>
 						<string key="NSFrameSize">{300, 99}</string>
-						<reference key="NSSuperview" ref="806274031"/>
+						<reference key="NSSuperview" ref="359896881"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="788647573"/>
+						<reference key="NSNextKeyView" ref="960905513"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -222,9 +222,9 @@
 				<string key="NSFrameSize">{300, 100}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="965286320"/>
+				<reference key="NSNextKeyView" ref="496499170"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="965286320"/>
+				<reference key="IBUIContentView" ref="496499170"/>
 				<string key="IBUIReuseIdentifier">FeedCell</string>
 			</object>
 		</array>
@@ -233,34 +233,51 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">timeLabel</string>
-						<reference key="source" ref="806274031"/>
-						<reference key="destination" ref="825637680"/>
+						<reference key="source" ref="359896881"/>
+						<reference key="destination" ref="237826477"/>
 					</object>
 					<int key="connectionID">11</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">descLabel</string>
-						<reference key="source" ref="806274031"/>
-						<reference key="destination" ref="265585987"/>
+						<reference key="source" ref="359896881"/>
+						<reference key="destination" ref="208933473"/>
 					</object>
 					<int key="connectionID">12</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">userNameLabel</string>
-						<reference key="source" ref="806274031"/>
-						<reference key="destination" ref="359006038"/>
+						<reference key="source" ref="359896881"/>
+						<reference key="destination" ref="956647232"/>
 					</object>
 					<int key="connectionID">13</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">guessStatLabel</string>
-						<reference key="source" ref="806274031"/>
-						<reference key="destination" ref="767712757"/>
+						<reference key="source" ref="359896881"/>
+						<reference key="destination" ref="137769579"/>
 					</object>
 					<int key="connectionID">15</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">actionButton</string>
+						<reference key="source" ref="359896881"/>
+						<reference key="destination" ref="94037211"/>
+					</object>
+					<int key="connectionID">16</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickActionButton:</string>
+						<reference key="source" ref="94037211"/>
+						<reference key="destination" ref="359896881"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">17</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -284,52 +301,52 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="806274031"/>
+						<reference key="object" ref="359896881"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="785250259"/>
-							<reference ref="825637680"/>
-							<reference ref="788647573"/>
-							<reference ref="359006038"/>
-							<reference ref="527367575"/>
-							<reference ref="265585987"/>
-							<reference ref="767712757"/>
+							<reference ref="75584678"/>
+							<reference ref="237826477"/>
+							<reference ref="960905513"/>
+							<reference ref="956647232"/>
+							<reference ref="94037211"/>
+							<reference ref="208933473"/>
+							<reference ref="137769579"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="785250259"/>
-						<reference key="parent" ref="806274031"/>
+						<reference key="object" ref="75584678"/>
+						<reference key="parent" ref="359896881"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="825637680"/>
-						<reference key="parent" ref="806274031"/>
+						<reference key="object" ref="237826477"/>
+						<reference key="parent" ref="359896881"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
-						<reference key="object" ref="788647573"/>
-						<reference key="parent" ref="806274031"/>
+						<reference key="object" ref="960905513"/>
+						<reference key="parent" ref="359896881"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="359006038"/>
-						<reference key="parent" ref="806274031"/>
+						<reference key="object" ref="956647232"/>
+						<reference key="parent" ref="359896881"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="527367575"/>
-						<reference key="parent" ref="806274031"/>
+						<reference key="object" ref="94037211"/>
+						<reference key="parent" ref="359896881"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="265585987"/>
-						<reference key="parent" ref="806274031"/>
+						<reference key="object" ref="208933473"/>
+						<reference key="parent" ref="359896881"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="767712757"/>
-						<reference key="parent" ref="806274031"/>
+						<reference key="object" ref="137769579"/>
+						<reference key="parent" ref="359896881"/>
 					</object>
 				</array>
 			</object>
@@ -352,20 +369,36 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">15</int>
+			<int key="maxID">17</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">FeedCell</string>
 					<string key="superclassName">PPTableViewCell</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">clickActionButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">clickActionButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">clickActionButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="actionButton">UIButton</string>
 						<string key="descLabel">UILabel</string>
 						<string key="guessStatLabel">UILabel</string>
 						<string key="timeLabel">UILabel</string>
 						<string key="userNameLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="actionButton">
+							<string key="name">actionButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="descLabel">
 							<string key="name">descLabel</string>
 							<string key="candidateClassName">UILabel</string>
